static/src/css/main.css
.checkbox,.arrow {
	background: none;
	border: none;
	padding: 0 4px;
}
.btn-alt:hover {
	background-color: var(--fill-hover);
}
.btn-page {
	background: none;
	border: none;
	padding: 0 2px;
}
.btn-icon-sm {
	height: 20px;
	width: 20px;
	border-radius: 0;
}

.btn-icon-alt {
	opacity: var(--opacity);
}

.selected-count-indicator {
	margin-left: 10px;
	font-weight: 600;
	color: #3559a8;
}

.pagination-page-label {
	margin: 0 8px;
	font-size: 0.82rem;
	color: var(--light-grey);
}

.hrt-rule {
	height: 1px;
	background-color: #dadce0;
}

/* ---- BODY GRID ---- */

.body-wrapper {
	display: grid;
	grid-template-columns: 270px 1fr 55px;
	grid-template-rows: auto calc(100vh - 64px);

}

/* ==== HEADER ==== */

.head {
	display: grid;
    grid-template-columns: 256px 1fr -webkit-min-content;
    grid-template-columns: 256px 1fr min-content;
    -ms-flex-pack: justify;
    -ms-flex-align: center;
    align-items: center;
    grid-column-gap: 12px;
    height: 64px;
    background-color: white;
    border-bottom: 1px solid var(--fill-border);
    grid-column: 1 / -1;
}

.header-group {
	display: -webkit-box;
    display: -ms-flexbox;
    -ms-flex-align: center;
    margin: 0 6px;
}

.header-search {
	display: -webkit-box; 
    display: -ms-flexbox;
    -ms-flex-align: center;
    -ms-flex-pack: justify;
    width: 100%;
    max-width: 720px;
    background-color: var(--fill-grey);
    border-radius: 8px;
    padding: 3px 8px;

}

.header-search:focus-within {
	background-color: white;

	-webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
		0 1px 3px 1px rgba(60, 64, 67, 0.149);

	box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
		0 1px 3px 1px rgba(60, 64, 67, 0.149);
}

.btn[type="reset"] {
	display: none;
}

.header-search:focus-within .btn[type="reset"] {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
}

.header-search-input {
	display: block;
	font-family: var(--font-sec);
	font-size: var(--font-m);
	font-weight: 400;
	background-color: transparent;
	width: 100%;
	padding: 4px;
	border: none;
	outline: none;
}

#header-profile {
	height: 40px;
	width: 40px;
}

.header-profile {
	height: 32px;
	width: 32px;
	opacity: 1;
}

#header-menu {
	width: 48px;
	height: 48px;
	margin: 4px;
}

/* ==== LEFT SIDEBAR ==== */

.left-sidebar {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-flow: column;
	flex-flow: column;
	grid-column: 1 / 2;
	grid-row: 2 / -1;
}

.left-sidebar-compose {
	padding: 0 10px;
	margin: 16px 0;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
}

.sidebar-btn-compose {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
	font-size: var(--font-m);
	line-height: 1.5rem;
	background: white;
	min-width: 48px;
	/* width: 145px; */
	height: 48px;
	vertical-align: middle;
	padding: 5px;
	border: none;
	border-radius: 999px;
	cursor: pointer;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	overflow: hidden;
	-webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
		0 1px 3px 1px rgba(60, 64, 67, 0.149);
	box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
		0 1px 3px 1px rgba(60, 64, 67, 0.149);
	-webkit-transition: -webkit-box-shadow 150ms ease;
	transition: -webkit-box-shadow 150ms ease;
	-o-transition: box-shadow 150ms ease;
	transition: box-shadow 150ms ease;
	transition: box-shadow 150ms ease, -webkit-box-shadow 150ms ease;
	-webkit-box-flex: 0;
	-ms-flex: 0 1 145px;
	flex: 0 1 145px;
}

.sidebar-btn-compose:hover {
	-webkit-box-shadow: 0 1px 3px 0 rgb(60 64 67 / 30%),
		0 4px 8px 3px rgb(60 64 67 / 15%);
	box-shadow: 0 1px 3px 0 rgb(60 64 67 / 30%), 0 4px 8px 3px rgb(60 64 67 / 15%);
	background-color: #fafafb;
}

.sidebar-btn-compose-icon {
	width: 27px;
    margin-left: 16px;
    margin-bottom: 9px;
}

.sidebar-btn-compose-title {
	color: var(--grey);
	font-family: var(--font-sec);
	font-size: 15px;
	font-weight: 500;
	letter-spacing: 0.25px;
	margin-left: 8px;
	margin-right: 18px;
}

.category-item-list {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-flow: column;
	flex-flow: column;
	width: 100%;
	margin: 0;
	padding: 0;
	padding-right: 16px;
}

.category-item {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-flow: row nowrap;
	flex-flow: row nowrap;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
	color: var(--grey);
	font-family: var(--font);
	font-size: 0.875rem;
	line-height: 1.1rem;
	min-height: 32px;
	padding: 0 12px 0 26px;
	border-top-right-radius: 999px;
	border-bottom-right-radius: 999px;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	-webkit-box-flex: 0;
	-ms-flex: 0;
	flex: 0;
}

.category-item:hover {
	background-color: var(--fill-hover);
	cursor: pointer;
}

.category-item > div {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
}

.category-item-icon {
	width: 20px;
	margin-right: 18px;
	opacity: var(--opacity);
}

.category-item.active {
	color: #7a539e;
	font-weight: 600;
	background-color: #fce8e6;
}

.category-item-active:hover {
	background-color: #fce8e6;
}

.category-item.active .category-item-icon {
	fill: #7a539e;
	opacity: 1;
}
/* ... */

